# c2-contract-risk

./: README.md  STATE.md  app.py  pyproject.toml
docs/: cli-demo.txt  sample-report.md
scripts/: run_demo.py
src/c2_contract_risk/: __init__.py  clauses.py  eval.py  extract.py  pdf_loader.py
tests/: test_smoke.py
tests/fixtures/: consulting_services_agreement.labels.json  consulting_services_agreement.txt  equipment_lease.txt  saas_master_agreement.labels.json  saas_master_agreement.txt
